# LotusRpc

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  .markdownlint.yaml  .yamllint.yaml  CHANGES.md  CMakeLists.txt  LICENSE  README.md  pyproject.toml  releasing.md  requirements.txt  semantic_analysis.txt  sonar-project.properties
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: cmake.yml  codeql.yml  jekyll-gh-pages.yml  link-check.yml  msvc.yml  (+4 more)
Lrpc/: ConstantsFileVisitor.py  IncludeAllVisitor.py  LrpcConstant.py  LrpcVisitor.py  PlantUmlVisitor.py  SematicAnalyzer.py  ServiceShimVisitor.py  __init__.py  lotusrpc.py
changes/: +e141e299.misc.md  103.feature.md  106.misc.md  122.feature.md  127.feature.md  132.misc.md  136.misc.md  145.removal.md  147.feature.md  157.feature.md  16.misc.md  160.misc.md  167.misc.md  168.misc.md  170.misc.md  171.misc.md  172.misc.md  176.misc.md  18.misc.md  185.feature.md  186.feature.md  188.bugfix.md  19.misc.md  192.misc.md  194.misc.md  195.feature.md  196.misc.md  202.bugfix.md  204.feature.md  208.bugfix.md  220.misc.md  227.misc.md  229.feature.md  250.misc.md  252.misc.md  256.misc.md  266.misc.md  273.misc.md  294.misc.md  62.doc.md  (+6 more)
cmake/: CompilerWarnings.cmake
docs/: _config.yml  adv_extending_lrpc.md  adv_internals.md  adv_meta.md  binary.md  cpp_api.md  examples.md  extending_lrpc.md  getting_started.md  index.md  lrpcc.md  lrpcg.md  meta.md  py_api_client.md  py_api_definition.md  py_api_visitor.md  python_client.md  python_visitor.md  readme.md  reference.md  reference_definition.md  reference_overlays.md  reference_settings.md  schema.md  test123.md  test456.md  tools.md  tools_lrpcc.md  tools_lrpcg.md
examples/stm32_nucleo_l496/: CMakeLists.txt  CMakePresets.json  STM32L496XX_FLASH.ld  lrpcc.config.yaml  readme.md  stm32_nucleo_l496.ioc
examples/stm32_nucleo_l496/App/: main.cpp
examples/stm32_nucleo_l496/App/lrpc/: example.lrpc.yaml
examples/stm32_nucleo_l496/Core/Inc/: main.h  stm32l4xx_hal_conf.h  stm32l4xx_it.h
examples/stm32_nucleo_l496/Core/Src/: gpio.c  main.c  stm32l4xx_hal_msp.c  stm32l4xx_it.c  syscalls.c  usart.c
examples/stm32_nucleo_l496/cmake/: gcc-arm-none-eabi.cmake  starm-clang.cmake
examples/stm32_nucleo_l496/cmake/stm32cubemx/: CMakeLists.txt
generator/: ConstantsFileVisitor.py  ConstantsFileWriter.py  DecoderShimWriter.py  EnumFileVisitor.py  EnumFileWriter.py  IncludeAllVisitor.py  IncludeAllWriter.py  LrpcConstant.py  LrpcConstantBase.py  LrpcDef.py  LrpcDefBase.py  LrpcEnum.py  LrpcEnumBase.py  LrpcFun.py  LrpcFunBase.py  LrpcService.py  LrpcServiceBase.py  LrpcStruct.py  LrpcStructBase.py  LrpcVar.py  LrpcVisitor.py  PlantUmlVisitor.py  SematicAnalyzer.py  ServiceShimVisitor.py  ServiceShimWriter.py  StructFileVisitor.py  StructFileWriter.py  lotusrpc-schema.json  lotusrpc.py  test_LrpcConstant.py  test_LrpcDef.py  test_LrpcEnum.py  test_LrpcStruct.py  test_schema.py
lrpc/: lrpcc.py  lrpcg.py
package/: README  pyproject.toml  setup.py
requirements/: dev.txt  package.txt
scripts/: install_arm_gcc.py
src/: Decoder.hpp  EtlRwExtensions.cpp  EtlRwExtensions.hpp  Server.hpp
tests/: CMakeLists.txt  TestDecoder.cpp  TestDecoder.lrpc.yaml  TestDecoder2.lrpc.yaml  TestDecoder2_s0.cpp  TestDecoder2_s1.cpp  TestEtlRwExtensions.cpp  TestRpc.cpp  TestServer.cpp  TestServer1.cpp  TestServer1.lrpc.yaml  TestServer2.lrpc.yaml  TestServer2_s0.cpp  TestServer2_s1.cpp  TestServer3.cpp  TestServer3.lrpc.yaml  TestServer4.cpp  TestServer4.lrpc.yaml  TestService.cpp  TestService.lrpc.yaml  TestService2.lrpc.yaml  TestService2_s0.cpp  TestService2_s1.cpp
tests/cpp/: .clang-tidy  CMakeLists.txt  TestByteArray_char.cpp  TestByteArray_int8_t.cpp  TestByteArray_signed_char.cpp  TestByteArray_unsigned_char.cpp  TestBytearray.cpp  TestBytearray.template.cpp  TestBytearray_char.cpp  TestBytearray_char8_t.cpp  TestBytearray_etl_byte.cpp  TestBytearray_int8_t.cpp  TestBytearray_signed_char.cpp  TestBytearray_std_byte.cpp  TestBytearray_uint8_t.cpp  TestBytearray_unsigned_char.cpp  TestEtlRwExtensions.cpp  TestForwarder.cpp  TestRetrieveDefinition.cpp  TestServer1.cpp  TestServer2_s0.cpp  TestServer2_s1.cpp  TestServer3.cpp  TestServer4.cpp  TestServer5.cpp  TestServerBase.hpp  TestServerErrors.cpp  TestUtils.hpp
tests/cpp/ext_files/: MyEnum2.hpp  MyEnum3.hpp  MyStruct1.hpp  MyStruct2.hpp
tests/embedded_definition/: __init__.py  embedded_definition.py
tests/ext_files/: MyEnum3.hpp  MyStruct1.hpp
tests/lrpcc/: lrpcc.config.yaml  lrpcc_file.py  lrpcc_mock.py  server.yaml  test_lrpcc.py  test_lrpcc_config.py  test_lrpcc_create.py  test_lrpcc_file.py  test_lrpcc_mock.py  utilities.py
tests/lrpcc/bad_configs/: additional_entry.config.yaml  invalid_log_level.config.yaml  invalid_transport_params.config.yaml  invalid_type.config.yaml  missing_def_url.config.yaml  missing_transport_type.config.yaml
tests/lrpcg/: conftest.py  test_lrpcg.py
tests/python/: test_byte_types_file_writer.py  test_client_stream_shim_writer.py  test_cpp_file.py  test_function_shim_writer.py  test_lrpc_client.py  test_lrpc_constant.py  test_lrpc_decode.py  test_lrpc_def.py  test_lrpc_encode.py  test_lrpc_encode_decode.lrpc.yaml  test_lrpc_encode_decode.py  test_lrpc_enum.py  test_lrpc_fun.py  test_lrpc_service.py  test_lrpc_stream.py  test_lrpc_struct.py  test_lrpc_var.py  test_meta_constants_writer.py  test_meta_service.py  test_meta_service_file_writer.py  test_overlay_merge.py  test_rpc_settings.py  test_schema.py  test_server_stream_response_writer.py  test_struct_codec_writer.py  utilities.py
tests/testdata/: TestBytearray.lrpc.yaml  TestBytearray_char.lrpc.yaml  TestBytearray_char8_t.lrpc.yaml  TestBytearray_etl_byte.lrpc.yaml  TestBytearray_int8_t.lrpc.yaml  TestBytearray_signed_char.lrpc.yaml  TestBytearray_std_byte.lrpc.yaml  TestBytearray_uint8_t.lrpc.yaml  TestBytearray_unsigned_char.lrpc.yaml  TestRetrieveDefinition.lrpc.yaml  TestServer1.lrpc.yaml  TestServer2.lrpc.yaml  TestServer3.lrpc.yaml  TestServer4.lrpc.yaml  TestServer5.lrpc.yaml  test_lrpc_encode_decode.lrpc.yaml
(+242 files in other folders)
